samples/_failures_safe/1761706206_8f2d6e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2a4c051d.c: In function ‘main’:
./samples/SAFE/__tmp_2a4c051d.c:134:59: error: ‘sample’ undeclared (first use in this function)
  134 |     if (!add_compression_block(&ctx, sample_data1, sizeof(sample
      |                                                           ^~~~~~
./samples/SAFE/__tmp_2a4c051d.c:134:59: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_2a4c051d.c:134:65: error: expected ‘)’ at end of input
  134 |     if (!add_compression_block(&ctx, sample_data1, sizeof(sample
      |                                                          ~      ^
      |                                                                 )
./samples/SAFE/__tmp_2a4c051d.c:134:5: error: expected declaration or statement at end of input
  134 |     if (!add_compression_block(&ctx, sample_data1, sizeof(sample
      |     ^~
